Add page in russian

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <main>
-    <a href="./index_ru.html" class="link ru-lang">
+    <a href="./index_ru.html" class="link lang ru">
       <span>Русский</span>
     </a>
     <div class="persona">
@@ -28,13 +28,13 @@
         <img src="./img/icons/mail.svg" alt="mail">
         <span>Email</span>
       </a>
-      <a href="https://vk.com/michgonch" target="_blank" class="link">
-        <img src="./img/icons/vk.svg" alt="vk">
-        <span>Vkontakte</span>
-      </a>
       <a href="https://github.com/michgonch" target="_blank" class="link">
         <img src="./img/icons/gh.svg" alt="github">
         <span>Github</span>
+      </a>
+      <a href="https://t.me/michgonchar" target="_blank" class="link">
+        <img src="./img/icons/tg.svg" alt="telegram">
+        <span>Telegram</span>
       </a>
     </div>
     <div class="about">
