--- a/index_ru.html
+++ b/index_ru.html
@@ -46,7 +46,7 @@
       </p>
     </div>
     <div class="portfolio">
-      <h2>My recent works</h2>
+      <h2>Мои недавние работы</h2>
       <div class="works">
         <div class="work">
           <img src="./img/works/gof.jpg" alt="gallery page">
