Add specideas project

--- a/index_ru.html
+++ b/index_ru.html
@@ -49,6 +49,15 @@
       <h2>Мои недавние работы</h2>
       <div class="works">
         <div class="work">
+          <img src="./img/works/specideas.jpg" alt="specideas page">
+          <a href="https://specideas.herokuapp.com/" target="_blank">
+            <h3>Specideas</h3>
+            <p>
+              Список технических идей. CRUD-приложение, использует Vue и Express, хранение в MongoDB.
+            </p>
+          </a>
+        </div>
+        <div class="work">
           <img src="./img/works/gof.jpg" alt="gallery page">
           <a href="https://galleryonfire.vercel.app/" target="_blank">
             <h3>Gallery on Fire</h3>
