--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
       <h2>My recent works</h2>
       <div class="works">
         <div class="work">
+          <img src="./img/works/specideas.jpg" alt="specideas page">
+          <a href="https://specideas.herokuapp.com/" target="_blank">
+            <h3>Specideas</h3>
+            <p>
+              List of tech ideas. CRUD App, built with Vue and Express, backed with MongoDB.
+            </p>
+          </a>
+        </div>
+        <div class="work">
           <img src="./img/works/gof.jpg" alt="gallery page">
           <a href="https://galleryonfire.vercel.app/" target="_blank">
             <h3>Gallery on Fire</h3>
